// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runAsyncTest: failing State updates Initial state matches snapshot (sanity) 1`] = `
Object {
  "carryOverTests": Array [],
  "lagging": Array [],
  "optionalFields": Object {},
  "pending": Array [
    VestTest {
      "asyncTest": Promise {},
      "canceled": false,
      "failed": false,
      "fieldName": "field_1",
      "id": "8",
      "isWarning": false,
      "message": "some message string",
      "testFn": [MockFunction],
    },
  ],
  "skippedTests": Array [],
  "suiteId": Object {
    "id": "1000",
  },
  "testCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Object {
      "field_1": Array [],
    },
  },
  "testObjects": Array [],
}
`;

exports[`runAsyncTest: passing State updates Initial state matches snapshot (sanity) 1`] = `
Object {
  "carryOverTests": Array [],
  "lagging": Array [],
  "optionalFields": Object {},
  "pending": Array [
    VestTest {
      "asyncTest": Promise {},
      "canceled": false,
      "failed": false,
      "fieldName": "field_1",
      "id": "0",
      "isWarning": false,
      "message": "some message string",
      "testFn": [MockFunction],
    },
  ],
  "skippedTests": Array [],
  "suiteId": Object {
    "id": "1000",
  },
  "testCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Object {
      "field_1": Array [],
    },
  },
  "testObjects": Array [],
}
`;
